Removed target=_blank

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li><a href="written.html">Written Work</a></li>
           <li><a href="about.html">About Me</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a target="_blank" href="resume.html">R&#233;sum&#233;</a></li>
+          <li><a   href="resume.html">R&#233;sum&#233;</a></li>
         </ul>
       </nav>
     </header>
@@ -35,9 +35,9 @@
         <p class="slogan">Deadline meets Command Line.</p>
 
         <div id="home-icons">
-          <a target="_blank" href="https://twitter.com/Sherman_Hewitt"><i class="fa fa-twitter fa-3x"></i></a>
-          <a target="_blank" href="https://www.linkedin.com/in/shermanhewitt"><i class="fa fa-linkedin-square fa-3x"></i></a>
-          <a target="_blank" href="https://github.com/SHewitt95"><i class="fa fa-github fa-3x"></i></a>
+          <a   href="https://twitter.com/Sherman_Hewitt"><i class="fa fa-twitter fa-3x"></i></a>
+          <a   href="https://www.linkedin.com/in/shermanhewitt"><i class="fa fa-linkedin-square fa-3x"></i></a>
+          <a   href="https://github.com/SHewitt95"><i class="fa fa-github fa-3x"></i></a>
         </div>
       </main>
 
