--- a/resume.html
+++ b/resume.html
@@ -21,17 +21,17 @@
 
 					<div id="contact-info">
 						<ul>
-							<li><a target="_blank" href="http://www.shewitt.me">shewitt.me</a></li>
+							<li><a   href="http://www.shewitt.me">shewitt.me</a></li>
 							<li>678.925.2463</li>
-							<li><a target="_blank" href="https://twitter.com/Sherman_Hewitt">@Sherman_Hewitt</a></li>
+							<li><a   href="https://twitter.com/Sherman_Hewitt">@Sherman_Hewitt</a></li>
 							<li>s.hewitt7@umiami.edu</li>
 						</ul>
 
 						<div id="icons">
-							<a target="_blank" href="https://twitter.com/Sherman_Hewitt"><i class="fa fa-twitter fa-2x"></i></a>
-							<a target="_blank" href="https://www.linkedin.com/in/shermanhewitt"><i class="fa fa-linkedin-square fa-2x"></i></a>
-							<a target="_blank" href="https://github.com/SHewitt95"><i class="fa fa-github fa-2x"></i></a>
-							<a target="_blank" href="http://www.shewitt.me"><i class="fa fa-globe fa-2x"></i></a>
+							<a   href="https://twitter.com/Sherman_Hewitt"><i class="fa fa-twitter fa-2x"></i></a>
+							<a   href="https://www.linkedin.com/in/shermanhewitt"><i class="fa fa-linkedin-square fa-2x"></i></a>
+							<a   href="https://github.com/SHewitt95"><i class="fa fa-github fa-2x"></i></a>
+							<a   href="http://www.shewitt.me"><i class="fa fa-globe fa-2x"></i></a>
 						</div>
 					</div>
 
