--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
           <li><a href="written.html">Written Work</a></li>
           <li><a href="about.html">About Me</a></li>
           <li><span id="current-page">Contact</span></li>
-          <li><a target="_blank" href="resume.html">R&#233;sum&#233;</a></li>
+          <li><a  href="resume.html">R&#233;sum&#233;</a></li>
         </ul>
       </nav>
     </header>
@@ -36,9 +36,9 @@
         </p>
 
         <div id="icons">
-          <a target="_blank" href="https://twitter.com/Sherman_Hewitt"><i class="fa fa-twitter fa-5x"></i></a>
-          <a target="_blank" href="https://www.linkedin.com/in/shermanhewitt"><i class="fa fa-linkedin-square fa-5x"></i></a>
-          <a target="_blank" href="https://github.com/SHewitt95"><i class="fa fa-github fa-5x"></i></a>
+          <a   href="https://twitter.com/Sherman_Hewitt"><i class="fa fa-twitter fa-5x"></i></a>
+          <a   href="https://www.linkedin.com/in/shermanhewitt"><i class="fa fa-linkedin-square fa-5x"></i></a>
+          <a   href="https://github.com/SHewitt95"><i class="fa fa-github fa-5x"></i></a>
         </div>
       </main>
 
