Added hamburger menu icon to mobile

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
     <header>
       <nav>
-        <a href="#" id="menu-icon"></a>
+        <a href="#" id="menu-icon">&#9776;</a>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="written.html">Written Work</a></li>
