--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body id="webpage">
     <header>
       <nav>
-        <a href="#" id="menu-icon"></a>
+        <a href="#" id="menu-icon">&#9776;</a>
         <ul>
           <li><span id="current-page">Home</span></li>
           <li><a href="written.html">Written Work</a></li>
