--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <body id="webpage">
     <header>
       <nav>
-        <a href="#" id="menu-icon"></a>
+        <a href="#" id="menu-icon">&#9776;</a>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="written.html">Written Work</a></li>
