--- a/written.html
+++ b/written.html
@@ -12,7 +12,7 @@
   <body id="webpage">
     <header>
       <nav>
-        <a href="#" id="menu-icon"></a>
+        <a href="#" id="menu-icon">&#9776;</a>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><span id="current-page">Written Work</span></li>
