Changed background, favicon. Fixed spelling error.

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="img/straws.png" rel="icon" type="image/x-icon" />
     <link href="css/index.css" media="screen" rel="stylesheet" />
     <link href="css/mobile.css" media="screen" rel="stylesheet" />
 
@@ -39,7 +39,7 @@
           At first I was shy, keeping my desire to write to myself.
           I couldn’t possibly fathom my work being seen by newspaper editors, let alone the world!
           But one step led to another, and I eventually had my first story published.
-          Since then, I’ve been on a role.
+          Since then, I’ve been on a roll.
           </p>
 
           <p>As of recent, I’ve tried to find ways to bridge the gap between
