--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
 				  <link href="css/index.css" media="screen" rel="stylesheet" />
 					<link href="css/mobile.css" media="screen" rel="stylesheet" />
 					<link href="css/test-print.css" media="print" rel="stylesheet" />
-					<link href="img/favicon.ico" rel="icon" type="image/x-icon" />
+					<link href="img/straws.png" rel="icon" type="image/x-icon" />
 					<title>Sherman Hewitt's Resume</title>
 	</head>
 
