--- a/written.html
+++ b/written.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="img/straws.png" rel="icon" type="image/x-icon" />
     <link href="css/index.css" media="screen" rel="stylesheet" />
     <link href="css/mobile.css" media="screen" rel="stylesheet" />
 
