--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="img/straws.png" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" href="font-awesome-4.3.0/css/font-awesome.min.css">
     <link href="css/index.css" media="screen" rel="stylesheet" />
     <link href="css/mobile.css" media="screen" rel="stylesheet" />
