Added target blank to resume link

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
           <li><a href="written.html">Written Work</a></li>
           <li><span id="current-page">About Me</span></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="resume.html">R&#233;sum&#233;</a></li>
+          <li><a target="_blank" href="resume.html">R&#233;sum&#233;</a></li>
         </ul>
       </nav>
 
