--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
           <li><a href="written.html">Written Work</a></li>
           <li><a href="about.html">About Me</a></li>
           <li><span id="current-page">Contact</span></li>
-          <li><a  href="resume.html">R&#233;sum&#233;</a></li>
+          <li><a target="_blank" href="resume.html">R&#233;sum&#233;</a></li>
         </ul>
       </nav>
     </header>
