--- a/written.html
+++ b/written.html
@@ -18,7 +18,7 @@
           <li><span id="current-page">Written Work</span></li>
           <li><a href="about.html">About Me</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a   href="resume.html">R&#233;sum&#233;</a></li>
+          <li><a  target="_blank" href="resume.html">R&#233;sum&#233;</a></li>
         </ul>
       </nav>
     </header>
