--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
       <main>
         <h1>Contact</h1>
 
-        <p>Got a question or a query? Feel free to contact me!
+        <p>Got a question or a query? Feel free to contact me.
            <a href="mailto:hewitt.sherman@gmail.com">Email</a> would be the best way to contact me, but here are some
            other ways to get in touch.
         </p>
