Moved index.html file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Homepage</title>
-  <link rel="stylesheet" href="../css/index.css" />
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 
 <body id="homepage">
@@ -16,7 +16,7 @@
           <li><a href="mailto:hewitt.sherman@gmail.com">Email</a></li>
           <li><a href="https://github.com/SHewitt95">Github</a></li>
           <li><a href="https://www.linkedin.com/in/shermanhewitt">LinkedIn</a></li>
-          <li><a href="Sherman_Hewitt_Resume.pdf">R&eacute;sum&eacute;</a></li>
+          <li><a href="html/Sherman_Hewitt_Resume.pdf">R&eacute;sum&eacute;</a></li>
           <li><a href="https://twitter.com/Sherman_Hewitt">Twitter</a></li>
         </ul>
       </nav>
@@ -26,19 +26,19 @@
       <div id="item-box">
         <h2>Programmer</h2>
 
-        <a target="_blank" href="wall_of_color.html">
+        <a target="_blank" href="html/wall_of_color.html">
           <div class="item">
             <div class="item-desc">Wall of Color</div>
             <div class="item-desc">Javascript and JQuery dynamically changing element colors.</div>
-            <img src="../img/homepage/wall_of_color.JPG" alt="Wall of color page" />
+            <img src="img/homepage/wall_of_color.JPG" alt="Wall of color page" />
           </div>
         </a>
 
-        <a target="_blank" href="oreo_popcorn.html">
+        <a target="_blank" href="html/oreo_popcorn.html">
           <div class="item">
             <div class="item-desc">Oreo Popcorn recipe</div>
             <div class="item-desc">Javascript and JQuery iterating through recipe steps.</div>
-            <img src="../img/homepage/oreo_popcorn.JPG" alt="Oreo popcorn page" />
+            <img src="img/homepage/oreo_popcorn.JPG" alt="Oreo popcorn page" />
           </div>
         </a>
 
@@ -46,7 +46,7 @@
           <div class="item">
             <div class="item-desc">Rock, Paper, Scissors</div>
             <div class="item-desc">Javascript, JQuery and flip.js implementing RPS logic.</div>
-            <img src="../img/homepage/rock-paper-scissors.PNG"/>
+            <img src="img/homepage/rock-paper-scissors.PNG"/>
           </div>
         </a>
 
