--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Homepage</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/index.css" />
 </head>
 
@@ -72,7 +73,7 @@
 
     </div> <!-- End container -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="../js/homepage/index.js"></script>
-  <script src="../js/homepage/FeedEk.js"></script>
+  <script src="js/homepage/index.js"></script>
+  <script src="js/homepage/FeedEk.js"></script>
 </body>
 </html>
