Added copyright, 'for more stories' link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div id="item-box">
         <h2>Programmer</h2>
 
-        <a target="_blank" href="html/wall_of_color.html">
+        <a  href="html/wall_of_color.html">
           <div class="item">
             <div class="item-desc">Wall of Color</div>
             <div class="item-desc">Javascript and JQuery dynamically changing element colors.</div>
@@ -35,7 +35,7 @@
           </div>
         </a>
 
-        <a target="_blank" href="html/oreo_popcorn.html">
+        <a  href="html/oreo_popcorn.html">
           <div class="item">
             <div class="item-desc">Oreo Popcorn recipe</div>
             <div class="item-desc">Javascript and JQuery iterating through recipe steps.</div>
@@ -43,7 +43,7 @@
           </div>
         </a>
 
-        <a target="_blank" href="http://shewitt.me/rock-paper-scissors/">
+        <a  href="http://shewitt.me/rock-paper-scissors/">
           <div class="item">
             <div class="item-desc">Rock, Paper, Scissors</div>
             <div class="item-desc">Javascript, JQuery and flip.js implementing RPS logic.</div>
@@ -67,11 +67,20 @@
         <div id="written-work">
           <h2>Journalist</h2>
           <div id="divRss"></div>
+          <p class="for-more">For more stories, <a href="http://www.themiamihurricane.com/author/shermanhewitt/"><span id="more-stories">click here</span></a>.</p>
         </div> <!-- End written-work -->
+
         <br class="clear" />
+
+        <footer>
+          <p id="copyright">Copyright &copy; <span id="year"></span> Sherman Hewitt</p>
+        </footer>
       </div> <!-- End right-box -->
 
+
     </div> <!-- End container -->
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/homepage/index.js"></script>
   <script src="js/homepage/FeedEk.js"></script>
