Removed home button

--- a/html/oreo_popcorn.html
+++ b/html/oreo_popcorn.html
@@ -7,7 +7,7 @@
 </head>
 
 <body id="oreo_popcorn">
-  <p class="home"><a href="index.html">Home</a></p>
+  <!--p class="home"><a href="../index.html">Home</a></p-->
   <div class="container">
     <header>
       <h1>Cookies &amp; Cream Popcorn</h1>
