--- a/html/wall_of_color.html
+++ b/html/wall_of_color.html
@@ -7,7 +7,7 @@
 </head>
 
 <body id="wall_of_color">
-  <p class="home"><a href="index.html">Home</a></p>
+  <!--p class="home"><a href="../index.html">Home</a></p-->
   <div class="container">
     <header>
       <h1>Wall of <span id="color">Color</span></h1>
