--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div id="left-box">
       <h1 id="my-name">Sherman Hewitt</h1>
-      <p id="my-title"><span id="programmer-button">Programmer</span> &diams; <span id="journalist-button">Journalist</span></p>
+      <p id="my-title">I am a <span id="programmer-button">Programmer</span> and <span id="journalist-button">Journalist</span>. I work for <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>.</p>
       <nav>
         <ul>
           <li><a href="mailto:hewitt.sherman@gmail.com">Email</a></li>
