Added coaching staff interactive

--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
           </div>
         </a>
 
+        <a  href="http://shewitt.me/miami_football_coaching_staff/">
+          <div class="item">
+            <div class="item-desc">Coaching Staff</div>
+            <div class="item-desc">Javascript, JQuery and flip.js displaying coaches' info.</div>
+            <img src="img/homepage/page_snapshot.PNG"/>
+          </div>
+        </a>
+
       </div> <!-- End item-box -->
 
 
