--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <p id="my-title">I am a <span id="programmer-button">Programmer</span> and <span id="journalist-button">Journalist</span>. I work for <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>.</p>
       <nav>
         <ul>
-          <li><a href="mailto:hewitt.sherman@gmail.com">Email</a></li>
+          <li><a href="mailto:s.hewitt7@umiami.edu">Email</a></li>
           <li><a href="https://github.com/SHewitt95">Github</a></li>
           <li><a href="https://www.linkedin.com/in/shermanhewitt">LinkedIn</a></li>
-          <li><a href="html/Sherman_Hewitt_Resume.pdf">R&eacute;sum&eacute;</a></li>
+          <li><a href="html/Resume_Sherman_Hewitt.pdf">R&eacute;sum&eacute;</a></li>
           <li><a href="https://twitter.com/Sherman_Hewitt">Twitter</a></li>
         </ul>
       </nav>
@@ -26,6 +26,48 @@
     <div id="right-box">
       <div id="item-box">
         <h2>Programmer</h2>
+
+        <a  href="http://features.themiamihurricane.com/bestofumiami2016/">
+          <div class="item">
+            <div class="item-desc">Best of UMiami 2016</div>
+            <div class="item-desc">Javascript and JQuery to display a feature story.</div>
+            <img src="img/homepage/portfolio-bestofumiami.JPG" alt="Best of UMiami page" />
+          </div>
+        </a>
+
+        <a  href="http://www.philly.com/philly/news/politics/Pennsylvanias_changing_electorate.html">
+          <div class="item">
+            <div class="item-desc">Pa. County Infographic</div>
+            <div class="item-desc">Javascript, JQuery, Highcharts and D3.js to visualize Pa.</div>
+            <img src="img/homepage/portfolio-penn-map.JPG" alt="Pa. infographic page" />
+          </div>
+        </a>
+
+        <a  href="http://www.philly.com/philly/news/politics/dnc/The_last_time_the_DNC_was_in_Philly_was_1948_Heres_what_it_was_like.html">
+          <div class="item">
+            <div class="item-desc">Philly in 1948</div>
+            <div class="item-desc">Reporting and Highcharts to create a feature story.</div>
+            <img src="img/homepage/portfolio-philly-1948.JPG" alt="Philly 1948 page" />
+          </div>
+        </a>
+
+        <a  href="http://www.philly.com/philly/news/politics/dnc/385217131.html">
+          <div class="item">
+            <div class="item-desc">DNC Quiz</div>
+            <div class="item-desc">Javascript, AJAX and Google Sheets to record readers' answers.</div>
+            <img src="img/homepage/portfolio-dnc-quiz.JPG" alt="DNC Quiz page" />
+          </div>
+        </a>
+
+        <a  href="http://www.philly.com/philly/infographics/Where_Pennsylvanias_representatives_stand_on_gun_control.html">
+          <div class="item">
+            <div class="item-desc">Pa. Reps on Gun Control</div>
+            <div class="item-desc">Javascript, AJAX and Google Sheets to record responses.</div>
+            <img src="img/homepage/portfolio-agree-disagree.JPG" alt="Pa. Reps page" />
+          </div>
+        </a>
+
+        <!--   -->
 
         <a  href="html/wall_of_color.html">
           <div class="item">
