Added college education interactive

--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
           </div>
         </a>
 
+        <a  href="http://shewitt.me/college_education/">
+          <div class="item">
+            <div class="item-desc">Higher Education Data</div>
+            <div class="item-desc">Javascript and D3 to illustrate US education.</div>
+            <img src="img/homepage/higher_education.PNG" alt="Higher Education" />
+          </div>
+        </a>
+
         <!--   -->
 
         <a  href="html/wall_of_color.html">
