Added The Agent

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
           </div>
         </a>
 
+        <a  href="http://shewitt.me/the_agent_game/">
+          <div class="item">
+            <div class="item-desc">The Agent</div>
+            <div class="item-desc">2D Game built with Unity.</div>
+            <img src="img/homepage/the_agent_game.PNG" alt="The Agent" />
+          </div>
+        </a>
+
         <a  href="http://www.philly.com/philly/news/politics/Pennsylvanias_changing_electorate.html">
           <div class="item">
             <div class="item-desc">Pa. County Infographic</div>
