--- a/index.html
+++ b/index.html
@@ -132,8 +132,25 @@
 
         <div id="written-work">
           <h2>Journalist</h2>
+
+          <a target=_blank href="img/homepage/Blockbuster_Infographic.jpg">
+            <div class="item">
+              <div class="item-desc">Blockbuster</div>
+              <div class="item-desc">Infographic made with Illustrator.</div>
+              <img src="img/homepage/Blockbuster_Infographic.jpg"/>
+            </div>
+          </a>
+
+          <a target=_blank href="img/homepage/Football_Infographic.jpg">
+            <div class="item">
+              <div class="item-desc">Football Concussions</div>
+              <div class="item-desc">Infographic made with Illustrator.</div>
+              <img src="img/homepage/Football_Infographic.jpg"/>
+            </div>
+          </a>
+
           <div id="divRss"></div>
-          <p class="for-more">For more stories, <a href="http://www.themiamihurricane.com/author/shermanhewitt/"><span id="more-stories">click here</span></a>.</p>
+          <p class="for-more">For more stories, <a target=_blank  href="http://www.themiamihurricane.com/author/shermanhewitt/"><span id="more-stories">click here</span></a>.</p>
         </div> <!-- End written-work -->
 
         <br class="clear" />
