--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div id="item-box">
         <h2>Programmer</h2>
 
-        <a  href="http://features.themiamihurricane.com/bestofumiami2016/">
+        <a target=_blank href="http://features.themiamihurricane.com/bestofumiami2016/">
           <div class="item">
             <div class="item-desc">Best of UMiami 2016</div>
             <div class="item-desc">Javascript and JQuery to display a feature story.</div>
@@ -35,7 +35,7 @@
           </div>
         </a>
 
-        <a  href="http://shewitt.me/the_agent_game/">
+        <a target=_blank href="http://shewitt.me/the_agent_game/">
           <div class="item">
             <div class="item-desc">The Agent</div>
             <div class="item-desc">2D Game built with Unity.</div>
@@ -43,7 +43,7 @@
           </div>
         </a>
 
-        <a  href="http://www.philly.com/philly/news/politics/Pennsylvanias_changing_electorate.html">
+        <a target=_blank href="http://www.philly.com/philly/news/politics/Pennsylvanias_changing_electorate.html">
           <div class="item">
             <div class="item-desc">Pa. County Infographic</div>
             <div class="item-desc">Javascript, JQuery, Highcharts and D3.js to visualize Pa.</div>
@@ -51,7 +51,7 @@
           </div>
         </a>
 
-        <a  href="http://www.philly.com/philly/news/politics/dnc/The_last_time_the_DNC_was_in_Philly_was_1948_Heres_what_it_was_like.html">
+        <a target=_blank href="http://www.philly.com/philly/news/politics/dnc/The_last_time_the_DNC_was_in_Philly_was_1948_Heres_what_it_was_like.html">
           <div class="item">
             <div class="item-desc">Philly in 1948</div>
             <div class="item-desc">Reporting and Highcharts to create a feature story.</div>
@@ -59,7 +59,7 @@
           </div>
         </a>
 
-        <a  href="http://www.philly.com/philly/news/politics/dnc/385217131.html">
+        <a target=_blank href="http://www.philly.com/philly/news/politics/dnc/385217131.html">
           <div class="item">
             <div class="item-desc">DNC Quiz</div>
             <div class="item-desc">Javascript, AJAX and Google Sheets to record readers' answers.</div>
@@ -67,7 +67,7 @@
           </div>
         </a>
 
-        <a  href="http://www.philly.com/philly/infographics/Where_Pennsylvanias_representatives_stand_on_gun_control.html">
+        <a target=_blank href="http://www.philly.com/philly/infographics/Where_Pennsylvanias_representatives_stand_on_gun_control.html">
           <div class="item">
             <div class="item-desc">Pa. Reps on Gun Control</div>
             <div class="item-desc">Javascript, AJAX and Google Sheets to record responses.</div>
@@ -75,7 +75,7 @@
           </div>
         </a>
 
-        <a  href="http://shewitt.me/college_education/">
+        <a target=_blank href="http://shewitt.me/college_education/">
           <div class="item">
             <div class="item-desc">Higher Education Data</div>
             <div class="item-desc">Javascript and D3 to illustrate US education.</div>
@@ -85,7 +85,7 @@
 
         <!--   -->
 
-        <a  href="html/wall_of_color.html">
+        <a target=_blank href="html/wall_of_color.html">
           <div class="item">
             <div class="item-desc">Wall of Color</div>
             <div class="item-desc">Javascript and JQuery dynamically changing element colors.</div>
@@ -93,7 +93,7 @@
           </div>
         </a>
 
-        <a  href="html/oreo_popcorn.html">
+        <a target=_blank href="html/oreo_popcorn.html">
           <div class="item">
             <div class="item-desc">Oreo Popcorn recipe</div>
             <div class="item-desc">Javascript and JQuery iterating through recipe steps.</div>
@@ -101,7 +101,7 @@
           </div>
         </a>
 
-        <a  href="http://shewitt.me/rock-paper-scissors/">
+        <a target=_blank href="http://shewitt.me/rock-paper-scissors/">
           <div class="item">
             <div class="item-desc">Rock, Paper, Scissors</div>
             <div class="item-desc">Javascript, JQuery and flip.js implementing RPS logic.</div>
@@ -109,7 +109,7 @@
           </div>
         </a>
 
-        <a  href="http://shewitt.me/miami_football_coaching_staff/">
+        <a target=_blank href="http://shewitt.me/miami_football_coaching_staff/">
           <div class="item">
             <div class="item-desc">Coaching Staff</div>
             <div class="item-desc">Javascript, JQuery and flip.js displaying coaches' info.</div>
