--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p id="my-title">I am a <span id="programmer-button">Programmer</span> and <span id="journalist-button">Journalist</span>.</p>
       <nav>
         <ul>
-          <li><a href="mailto:s.hewitt7@umiami.edu">Email</a></li>
+          <li><a href="mailto:hewitt.sherman@gmail.com">Email</a></li>
           <li><a href="https://github.com/SHewitt95">Github</a></li>
           <li><a href="https://www.linkedin.com/in/shermanhewitt">LinkedIn</a></li>
           <li><a href="html/Resume_Sherman_Hewitt.pdf">R&eacute;sum&eacute;</a></li>
